--- a/A03_SOMA_CODINGTEST/B_11_15/C13_D-18_260217.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C13_D-18_260217.ipynb
@@ -58,71 +58,141 @@
    "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70\n",
+      "3\n",
+      "35\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(수학): 백준 9613 (GCD 합) - https://www.acmicpc.net/problem/9613\n",
     "import sys\n",
+    "from itertools import combinations, islice\n",
+    "from math import gcd\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "4 10 20 30 40\n",
+    "3 7 5 12\n",
+    "3 125 15 25''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    data = map(int, input().split())\n",
+    "    nums = islice(data, 1, None)\n",
     "\n",
-    "    pass\n",
+    "    gcd_sum = 0\n",
+    "    for a, b in combinations(nums, 2):\n",
+    "        gcd_sum += gcd(a, b)\n",
+    "\n",
+    "    print(gcd_sum)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "t = int(input())\n",
+    "for _ in range(t):\n",
+    "    solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(Map): 백준 14425 (문자열 집합) - https://www.acmicpc.net/problem/14425\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 11\n",
+    "baekjoononlinejudge\n",
+    "startlink\n",
+    "codeplus\n",
+    "sundaycoding\n",
+    "codingsh\n",
+    "baekjoon\n",
+    "codeplus\n",
+    "codeminus\n",
+    "startlink\n",
+    "starlink\n",
+    "sundaycoding\n",
+    "codingsh\n",
+    "codinghs\n",
+    "sondaycoding\n",
+    "startrink\n",
+    "icerink''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    S = set(input().rstrip() for _ in range(N))\n",
+    "    A = sum(1 for _ in range(M) if input().rstrip() in S)\n",
+    "    print(A)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(그리디): 백준 2012 (등수 매기기) - https://www.acmicpc.net/problem/2012\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5\n",
+    "1\n",
+    "5\n",
+    "3\n",
+    "1\n",
+    "2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    exp_rank = sorted(int(input()) for _ in range(N))\n",
+    "\n",
+    "    diff_sum = 0\n",
+    "    for actual, exp in enumerate(exp_rank, start=1):\n",
+    "        diff_sum += abs(actual - exp)\n",
+    "\n",
+    "    print(diff_sum)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -131,7 +201,17 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- 5. SQL(Lv.2): 가격대 별 상품 개수 구하기 - https://school.programmers.co.kr/learn/courses/30/lessons/131530\n",
+    "-- 5. SQL(Lv.2): 가격대 별 상품 개수 구하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/131530\n",
+    "SELECT \n",
+    "    TRUNCATE(price, -4) AS PRICE_GROUP,\n",
+    "    COUNT(*) AS PRODUCTS\n",
+    "FROM \n",
+    "    PRODUCT\n",
+    "GROUP BY\n",
+    "    PRICE DIV 10000\n",
+    "ORDER BY\n",
+    "    PRICE_GROUP;\n",
     "```"
    ]
   },
@@ -140,23 +220,96 @@
    "execution_count": null,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 20056 (마법사 상어와 파이어볼) - https://www.acmicpc.net/problem/20056\n",
     "import sys\n",
+    "from collections import defaultdict\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''7 5 3\n",
+    "1 3 5 2 4\n",
+    "2 3 5 2 6\n",
+    "5 2 9 1 7\n",
+    "6 2 1 3 5\n",
+    "4 4 2 4 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M, K = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    ball_dict = defaultdict(list)\n",
+    "    for _ in range(M):\n",
+    "        r, c, mass, speed, dir = map(int, input().split())\n",
+    "        ball_dict[(r-1, c-1)].append((mass, speed, dir))\n",
+    "\n",
+    "    directions = [\n",
+    "        (-1, +0), (-1, +1), (+0, +1), (+1, +1),\n",
+    "        (+1, +0), (+1, -1), (+0, -1), (-1, -1)\n",
+    "    ]\n",
+    "\n",
+    "    while K > 0:\n",
+    "        # 이동\n",
+    "        moved_ball_dict = defaultdict(list)\n",
+    "        for (r, c), balls in ball_dict.items():\n",
+    "            for m, s, d in balls:\n",
+    "                dr, dc = directions[d]\n",
+    "\n",
+    "                nr = (r + dr * s) % N\n",
+    "                nc = (c + dc * s) % N\n",
+    "\n",
+    "                moved_ball_dict[(nr, nc)].append((m, s, d))\n",
+    "\n",
+    "        merged_dict = defaultdict(list)\n",
+    "\n",
+    "        for (r, c), balls in moved_ball_dict.items():\n",
+    "            if len(balls) >= 2:\n",
+    "                total_mess = 0\n",
+    "                total_speed = 0\n",
+    "                dirs = []\n",
+    "\n",
+    "                for m, s, d in balls:\n",
+    "                    total_mess += m\n",
+    "                    total_speed += s\n",
+    "                    dirs.append(d % 2)\n",
+    "\n",
+    "                nm = total_mess // 5\n",
+    "                ns = total_speed // len(balls)\n",
+    "\n",
+    "                if nm == 0:  # 다음 질량이 0이면 모두 소멸\n",
+    "                    continue\n",
+    "\n",
+    "                odd_cnt = sum(dirs)  # 홀수 개수 카운트\n",
+    "                is_same_type = odd_cnt == 0 or odd_cnt == len(balls)\n",
+    "                next_dirs = [0, 2, 4, 6] if is_same_type else [1, 3, 5, 7]\n",
+    "\n",
+    "                for nd in next_dirs:\n",
+    "                    merged_dict[(r, c)].append((nm, ns, nd))\n",
+    "            else:\n",
+    "                merged_dict[(r, c)] = balls\n",
+    "\n",
+    "        ball_dict = merged_dict\n",
+    "\n",
+    "        K -= 1\n",
+    "\n",
+    "    final_mass_sum = 0\n",
+    "    for (r, c), ball_lst in ball_dict.items():\n",
+    "        final_mass_sum += sum(m for m, *_ in ball_lst)\n",
+    "\n",
+    "    print(final_mass_sum)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -164,71 +317,162 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 1106 (호텔) - https://www.acmicpc.net/problem/1106\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''12 2\n",
+    "3 5\n",
+    "1 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    C, N = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    # dp[i] = i명 이상을 모으는데 필요한 최소 비용\n",
+    "    dp = [0] + [float('inf')] * C\n",
+    "\n",
+    "    for _ in range(N):\n",
+    "        cost, custom = map(int, input().split())\n",
+    "\n",
+    "        for c in range(1, C + 1):\n",
+    "            dp[c] = min(dp[c], dp[max(0, c-custom)] + cost)\n",
+    "\n",
+    "    print(dp[C])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 5\n",
+      "3 6\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 10282 (해킹) - https://www.acmicpc.net/problem/10282\n",
     "import sys\n",
+    "from heapq import heappop, heappush\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''2\n",
+    "3 2 2\n",
+    "2 1 5\n",
+    "3 2 5\n",
+    "3 3 1\n",
+    "2 1 2\n",
+    "3 1 8\n",
+    "3 2 4''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    n, d, c = map(int, input().split())\n",
+    "\n",
+    "    graph = [[] for _ in range(n + 1)]\n",
+    "    for _ in range(d):\n",
+    "        a, b, s = map(int, input().split())\n",
+    "        graph[b].append((a, s))\n",
+    "\n",
+    "    pq = [(0, c)]  # (누적 소요시간, 컴퓨터)\n",
+    "    min_time = [float('inf')] * (n + 1)\n",
+    "    min_time[c] = 0\n",
+    "\n",
+    "    while pq:\n",
+    "        cur_time, cur = heappop(pq)\n",
+    "\n",
+    "        if cur_time != min_time[cur]:\n",
+    "            continue\n",
+    "\n",
+    "        for nxt, time in graph[cur]:\n",
+    "            nxt_time = cur_time + time\n",
+    "            if nxt_time < min_time[nxt]:\n",
+    "                heappush(pq, (nxt_time, nxt))\n",
+    "                min_time[nxt] = nxt_time\n",
+    "\n",
+    "    result = list(filter(lambda x: x != float('inf'), min_time))\n",
+    "    print(len(result), max(result))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 1182 (부분수열의 합) - https://www.acmicpc.net/problem/1182\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 0\n",
+    "-7 -3 -2 5 8''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, S = map(int, input().split())\n",
+    "    nums = list(map(int, input().split()))\n",
+    "    count = 0\n",
     "\n",
-    "    pass\n",
+    "    def dfs(idx, sum_val):\n",
+    "        nonlocal count\n",
+    "\n",
+    "        if idx == N:\n",
+    "            return\n",
+    "\n",
+    "        num = nums[idx]\n",
+    "        sum_val += num\n",
+    "        if sum_val == S:\n",
+    "            count += 1\n",
+    "\n",
+    "        dfs(idx + 1, sum_val)        # 선택\n",
+    "        dfs(idx + 1, sum_val - num)  # 선택 안함\n",
+    "\n",
+    "    dfs(0, 0)\n",
+    "\n",
+    "    print(count)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -237,14 +481,37 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- 5. SQL(Lv.4): 입양 시각 구하기(2) - https://school.programmers.co.kr/learn/courses/30/lessons/59413\n",
+    "-- 5. SQL(Lv.4): 입양 시각 구하기(2) \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/59413\n",
+    "WITH RECURSIVE \n",
+    "    RECUR AS (\n",
+    "        SELECT 0 AS HOUR\n",
+    "        UNION ALL\n",
+    "        SELECT HOUR + 1\n",
+    "        FROM RECUR\n",
+    "        WHERE HOUR < 23\n",
+    "    ),\n",
+    "    CNT AS (\n",
+    "        SELECT\n",
+    "            HOUR(DATETIME) AS HOUR,\n",
+    "            COUNT(*) AS COUNT\n",
+    "        FROM ANIMAL_OUTS\n",
+    "        GROUP BY HOUR\n",
+    "    )\n",
+    "SELECT\n",
+    "    HOUR,\n",
+    "    IFNULL(COUNT, 0)\n",
+    "FROM RECUR\n",
+    "LEFT JOIN \n",
+    "    CNT USING (HOUR)\n",
+    "ORDER BY HOUR;\n",
     "```"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
