--- a/A03_SOMA_CODINGTEST/B_11_15/C14_D-17_260218.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C14_D-17_260218.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 20053 (최소, 최대 2) - https://www.acmicpc.net/problem/20053\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 2740 (행렬 곱셈) - https://www.acmicpc.net/problem/2740\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 4358 (생태학) - https://www.acmicpc.net/problem/4358\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 14916 (거스름돈) - https://www.acmicpc.net/problem/14916\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -102,7 +102,8 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): 재구매가 일어난 상품과 회원 리스트 구하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/131536\n",
     "```"
    ]
   },
@@ -113,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 14500 (테트로미노) - https://www.acmicpc.net/problem/14500\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -137,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 12852 (1로 만들기 2) - https://www.acmicpc.net/problem/12852\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 1261 (알고스팟) - https://www.acmicpc.net/problem/1261\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 18429 (근성장) - https://www.acmicpc.net/problem/18429\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
