--- a/A03_SOMA_CODINGTEST/B_11_15/C14_D-17_260218.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C14_D-17_260218.ipynb
@@ -5,71 +5,201 @@
    "execution_count": null,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 28\n",
+      "17 30\n",
+      "7 35\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(구현): 백준 20053 (최소, 최대 2) - https://www.acmicpc.net/problem/20053\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "5\n",
+    "20 28 22 25 21\n",
+    "5\n",
+    "30 21 17 25 29\n",
+    "5\n",
+    "20 10 35 30 7''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    min, max = +float('inf'), -float('inf')\n",
+    "\n",
+    "    for num in map(int, input().split()):\n",
+    "        if num < min:\n",
+    "            min = num\n",
+    "\n",
+    "        if num > max:\n",
+    "            max = num\n",
+    "\n",
+    "    print(min, max)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1 -2 6\n",
+      "-3 -6 12\n",
+      "-5 -10 18\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(수학): 백준 2740 (행렬 곱셈) - https://www.acmicpc.net/problem/2740\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 2\n",
+    "1 2\n",
+    "3 4\n",
+    "5 6\n",
+    "2 3\n",
+    "-1 -2 0\n",
+    "0 0 3''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
+    "    A = [tuple(map(int, input().split())) for _ in range(N)]\n",
     "\n",
-    "    pass\n",
+    "    M, K = map(int, input().split())\n",
+    "    B = [tuple(map(int, input().split())) for _ in range(M)]\n",
+    "\n",
+    "    C = [[0]*K for _ in range(N)]\n",
+    "\n",
+    "    for r, c in product(range(N), range(K)):\n",
+    "        C[r][c] = sum(A[r][m]*B[m][c] for m in range(M))\n",
+    "\n",
+    "    for row in C:\n",
+    "        print(*row)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ash 13.7931\n",
+      "Aspen 3.4483\n",
+      "Basswood 3.4483\n",
+      "Beech 3.4483\n",
+      "Black Walnut 3.4483\n",
+      "Cherry 3.4483\n",
+      "Cottonwood 3.4483\n",
+      "Cypress 3.4483\n",
+      "Gum 3.4483\n",
+      "Hackberry 3.4483\n",
+      "Hard Maple 3.4483\n",
+      "Hickory 3.4483\n",
+      "Pecan 3.4483\n",
+      "Poplan 3.4483\n",
+      "Red Alder 3.4483\n",
+      "Red Elm 3.4483\n",
+      "Red Oak 6.8966\n",
+      "Sassafras 3.4483\n",
+      "Soft Maple 3.4483\n",
+      "Sycamore 3.4483\n",
+      "White Oak 10.3448\n",
+      "Willow 3.4483\n",
+      "Yellow Birch 3.4483\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(Map): 백준 4358 (생태학) - https://www.acmicpc.net/problem/4358\n",
     "import sys\n",
+    "from collections import defaultdict\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''Red Alder\n",
+    "Ash\n",
+    "Aspen\n",
+    "Basswood\n",
+    "Ash\n",
+    "Beech\n",
+    "Yellow Birch\n",
+    "Ash\n",
+    "Cherry\n",
+    "Cottonwood\n",
+    "Ash\n",
+    "Cypress\n",
+    "Red Elm\n",
+    "Gum\n",
+    "Hackberry\n",
+    "White Oak\n",
+    "Hickory\n",
+    "Pecan\n",
+    "Hard Maple\n",
+    "White Oak\n",
+    "Soft Maple\n",
+    "Red Oak\n",
+    "Red Oak\n",
+    "White Oak\n",
+    "Poplan\n",
+    "Sassafras\n",
+    "Sycamore\n",
+    "Black Walnut\n",
+    "Willow''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    count = defaultdict(int)\n",
+    "    total = 0\n",
+    "\n",
+    "    while True:\n",
+    "        name = input().rstrip()\n",
+    "\n",
+    "        if not name:\n",
+    "            break\n",
+    "\n",
+    "        count[name] += 1\n",
+    "        total += 1\n",
+    "\n",
+    "    print(\"\\n\".join(\n",
+    "        f\"{key} {(count[key]*100 / total):.4f}\"\n",
+    "        for key in sorted(count)\n",
+    "    ))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -215,8 +345,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.13.9)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
