--- a/A03_SOMA_CODINGTEST/B_11_15/C14_D-17_260218.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C14_D-17_260218.ipynb
@@ -207,23 +207,41 @@
    "execution_count": null,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(그리디): 백준 14916 (거스름돈) - https://www.acmicpc.net/problem/14916\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''13''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    n = int(input())\n",
     "\n",
-    "    pass\n",
+    "    if n == 1 or n == 3:    # 불가능\n",
+    "        print(-1)\n",
+    "        return\n",
+    "\n",
+    "    q, r = divmod(n, 5)\n",
+    "\n",
+    "    if r % 2 == 0:\n",
+    "        print(q + (r // 2))\n",
+    "    else:\n",
+    "        print((q - 1) + (r + 5)//2)   # 5원 하나 빼서, 2로 나눔\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -234,6 +252,17 @@
     "```sql\n",
     "-- 5. SQL(Lv.2): 재구매가 일어난 상품과 회원 리스트 구하기 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/131536\n",
+    "SELECT\n",
+    "    USER_ID,\n",
+    "    PRODUCT_ID\n",
+    "FROM \n",
+    "    ONLINE_SALE\n",
+    "GROUP BY\n",
+    "    USER_ID, PRODUCT_ID\n",
+    "HAVING\n",
+    "    COUNT(*) >=2\n",
+    "ORDER BY\n",
+    "    USER_ID, PRODUCT_ID DESC;\n",
     "```"
    ]
   },
@@ -242,23 +271,93 @@
    "execution_count": null,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 14500 (테트로미노) - https://www.acmicpc.net/problem/14500\n",
     "import sys\n",
+    "from itertools import combinations, product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 5\n",
+    "1 2 3 4 5\n",
+    "5 4 3 2 1\n",
+    "2 3 4 5 6\n",
+    "6 5 4 3 2\n",
+    "1 2 1 2 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
+    "    board = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "    MAX_BOARD_VAL = max(map(max, board))\n",
     "\n",
-    "    pass\n",
+    "    directions = [(0, +1), (0, -1), (-1, 0), (+1, 0)]\n",
+    "    three_dir_combis = tuple(combinations(directions, 3))\n",
+    "\n",
+    "    visited = [[False] * M for _ in range(N)]\n",
+    "    max_value = 0\n",
+    "\n",
+    "    def find_t_shape(r, c):\n",
+    "        nonlocal max_value\n",
+    "        start_val = board[r][c]\n",
+    "\n",
+    "        # T 유형 조사.\n",
+    "        for combi in three_dir_combis:\n",
+    "            temp_sum = start_val\n",
+    "            for dr, dc in combi:\n",
+    "                nr, nc = r + dr, c + dc\n",
+    "                if 0 <= nr < N and 0 <= nc < M:\n",
+    "                    temp_sum += board[nr][nc]\n",
+    "                else:\n",
+    "                    break\n",
+    "            else:             # 3개다 모두 누적된 결과\n",
+    "                max_value = max(max_value, temp_sum)\n",
+    "\n",
+    "    # 4가지 조사 (T 제외)\n",
+    "    def dfs(depth, total_sum, cur_r, cur_c):\n",
+    "        nonlocal max_value\n",
+    "\n",
+    "        # 남은 것을 모두 최대 값으로 채워도 맥스 Value 보다 작으면\n",
+    "        if total_sum + (4 - depth) * MAX_BOARD_VAL <= max_value:\n",
+    "            return\n",
+    "\n",
+    "        if depth == 4:\n",
+    "            max_value = max(max_value, total_sum)\n",
+    "            return\n",
+    "\n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = cur_r + dr, cur_c + dc\n",
+    "\n",
+    "            # 현재 위치 기준, 인덱스 체크하고, 방문한 노드인지 체크\n",
+    "            if 0 <= nr < N and 0 <= nc < M and not visited[nr][nc]:\n",
+    "                visited[nr][nc] = True\n",
+    "                dfs(depth + 1, total_sum + board[nr][nc], nr, nc)\n",
+    "                visited[nr][nc] = False\n",
+    "\n",
+    "    # 가지치기를 위해 가능한 최대값 우선 탐색\n",
+    "    for r, c in product(range(N), range(M)):\n",
+    "        find_t_shape(r, c)\n",
+    "\n",
+    "    for r, c in product(range(N), range(M)):\n",
+    "        if (r + c) % 2 == 0:  # 바로 옆칸, 아래칸은 중복 조사 되어 제외.\n",
+    "            visited[r][c] = True\n",
+    "            dfs(1, board[r][c], r, c)\n",
+    "            visited[r][c] = False\n",
+    "\n",
+    "    print(max_value)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -266,23 +365,61 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "10 9 3 1\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 12852 (1로 만들기 2) - https://www.acmicpc.net/problem/12852\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''10''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "\n",
+    "    # i를 만들 수 있는 최소 횟수\n",
+    "    dp = [0] * (N + 1)\n",
+    "    path = [0] * (N + 1)   # 이전 값 (부모 추적)\n",
+    "\n",
+    "    for i in range(2, N + 1):\n",
+    "\n",
+    "        # 1 더하기\n",
+    "        dp[i] = dp[i - 1] + 1\n",
+    "        path[i] = i - 1\n",
+    "\n",
+    "        # 2 곱하기\n",
+    "        if i % 2 == 0 and dp[i] > dp[i//2] + 1:  # 이전방식보다 새 방식이 더 짧으면\n",
+    "            dp[i] = dp[i//2] + 1\n",
+    "            path[i] = i // 2\n",
+    "\n",
+    "        # 3 곱하기\n",
+    "        if i % 3 == 0 and dp[i] > dp[i//3] + 1:\n",
+    "            dp[i] = dp[i//3] + 1\n",
+    "            path[i] = i // 3\n",
+    "\n",
+    "    history = list()\n",
+    "    cur = N\n",
+    "    while cur != 0:\n",
+    "        history.append(cur)\n",
+    "        cur = path[cur]\n",
+    "\n",
+    "    print(dp[N])\n",
+    "    print(*history)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -290,23 +427,65 @@
    "execution_count": null,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 1261 (알고스팟) - https://www.acmicpc.net/problem/1261\n",
     "import sys\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6 6\n",
+    "001111\n",
+    "010000\n",
+    "001111\n",
+    "110001\n",
+    "011010\n",
+    "100010''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    M, N = map(int, input().split())\n",
+    "    board = [input().rstrip() for _ in range(N)]\n",
+    "\n",
+    "    directions = [(0, -1), (0, +1), (-1, 0), (+1, 0)]\n",
+    "    broken = [[-1] * M for _ in range(N)]\n",
+    "\n",
+    "    dq = deque([(0, 0)])\n",
+    "    broken[0][0] = 0\n",
+    "\n",
+    "    while dq:\n",
+    "        r, c = dq.popleft()\n",
+    "\n",
+    "        if r == N - 1 and c == M - 1:\n",
+    "            print(broken[r][c])\n",
+    "            return\n",
+    "\n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "            if 0 <= nr < N and 0 <= nc < M and broken[nr][nc] == -1:\n",
+    "                nxt_val = board[nr][nc]\n",
+    "\n",
+    "                if nxt_val == '0':      # 왼쪽에 넣어서 비용 최소값 보장\n",
+    "                    dq.appendleft((nr, nc))\n",
+    "                    broken[nr][nc] = broken[r][c]\n",
+    "\n",
+    "                else:\n",
+    "                    dq.append((nr, nc))\n",
+    "                    broken[nr][nc] = broken[r][c] + 1\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -314,23 +493,56 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 18429 (근성장) - https://www.acmicpc.net/problem/18429\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 4\n",
+    "3 7 5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, K = map(int, input().split())\n",
+    "    weight = sorted(map(int, input().split()))  # 정렬을 통한 최적화\n",
     "\n",
-    "    pass\n",
+    "    used_kit = [False] * N\n",
+    "    count = 0\n",
+    "\n",
+    "    # 사용 갯수, 여분\n",
+    "    def dfs(use_cnt, margin):\n",
+    "        nonlocal count\n",
+    "\n",
+    "        if margin < 500:  # 운동마치고, 감소된 결과 체크\n",
+    "            return\n",
+    "\n",
+    "        if use_cnt == N:\n",
+    "            count += 1\n",
+    "            return\n",
+    "\n",
+    "        # 사용 가능한 키트\n",
+    "        for i in range(N):\n",
+    "            if not used_kit[i]:\n",
+    "                used_kit[i] = True\n",
+    "                dfs(use_cnt + 1, margin + weight[i] - K)  # 운동 후 감소까지 완료.\n",
+    "                used_kit[i] = False\n",
+    "\n",
+    "    dfs(0, 500)\n",
+    "    print(count)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -339,14 +551,35 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.4): 년, 월, 성별 별 상품 구매 회원 수 구하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/131532\n",
+    "WITH \n",
+    "    YM AS (\n",
+    "        SELECT DISTINCT\n",
+    "            YEAR(SALES_DATE) AS YEAR,\n",
+    "            MONTH(SALES_DATE) AS MONTH,\n",
+    "            USER_ID\n",
+    "        FROM ONLINE_SALE\n",
+    "    )\n",
+    "SELECT\n",
+    "    YM.YEAR,\n",
+    "    YM.MONTH,\n",
+    "    UI.GENDER,\n",
+    "    COUNT(*) AS USERS\n",
+    "FROM YM\n",
+    "JOIN USER_INFO UI USING (USER_ID)\n",
+    "WHERE UI.GENDER IS NOT NULL\n",
+    "GROUP BY\n",
+    "    YM.YEAR, YM.MONTH, UI.GENDER\n",
+    "ORDER BY\n",
+    "    YM.YEAR, YM.MONTH, UI.GENDER;\n",
     "```"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
