--- a/A03_SOMA_CODINGTEST/B_11_15/C15_D-16_260219.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C15_D-16_260219.ipynb
@@ -5,23 +5,45 @@
    "execution_count": null,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(구현): 백준 2960 (에라토스테네스의 체) - https://www.acmicpc.net/problem/2960\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''10 7''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, K = map(int, input().split())\n",
+    "    nums = set(range(2, N+1))  # Set 으로 풀어봄\n",
+    "\n",
+    "    del_cnt = 0\n",
+    "    while nums:\n",
+    "        P = min(nums)\n",
+    "        nxt = P\n",
+    "        while nxt <= N:  # 지울 숫자 없어도 진행\n",
+    "            if nxt in nums:\n",
+    "                nums.discard(nxt)\n",
+    "                del_cnt += 1\n",
+    "                if del_cnt == K:\n",
+    "                    print(nxt)\n",
+    "                    return\n",
+    "            nxt += P\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -216,8 +238,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.13.9)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
